 Change history for MATPOWER
-----------------------------

Version:    6.0

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
Copyright (c) 1996-2017, Power Systems Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.

For change history for MOST, see most/docs/CHANGES.


Changes since last release
--------------------------

1/5/17
    - Fix bug #4 where some Q limits were not being respected by CPF
      when buses were converted to PQ by initial power flow run.
      (thanks to Shruti Rao)

1/4/17
    - When genfuel field is present in mpc, load2disp() now augments
      it with 'dl' entries for the dispatchable loads it adds.

1/3/17
    - Change default implementation of active power line flow
      constraints (opf.flow_lim = 'P') to use flow directly, rather
      than square of flow, which is now a separate option, namely
      opf.flow_lim = '2'. (thanks to Nico Meyer-Huebner)

12/29/16
    - Fix bug in converting older versions of MATPOWER options struct.

12/21/16
    - Add Travis-CI integration (thanks to Richard Lincoln).


Changes since 6.0b2
-------------------

12/16/16
    - Released 6.0.
    - Moved development to GitHub <https://github.com/MATPOWER/matpower>.

12/9/16
    - Bumped version to 1.2.2.
    - Renamed MIPS from MATLAB Interior Point Solver to MATPOWER Interior
      Point Solver.

12/6/16
    - Remove dependence of t_mpsolve() on presence of have_fcn() to
      detect PARDISO installation.
    - Remove dependence of mpver() on presence of mostver().


Changes since 6.0b1
-------------------

11/1/16
    - Released 6.0b2.

10/26/16
    - Include support for MOSEK 8, some algorithms eliminated, others changed
      algorithm code set via 'mosek.lp_alg' option.

10/19/16
    - Improved robustness of infeasibility detection when 'pf.enforce_q_lims'
      option is used.
    - Add tests for power flow with 'pf.enforce_q_lims' option.

10/14/16