@@ -26,6 +26,7 @@ Load
     dispatched           5005.2      4242.0       189.2       259.0       315.0 
       fixed              5005.2      4242.0       189.2       259.0       315.0 
       dispatchable          -           -           -           -           -   
+    curtailed               -           -           -           -           -   
     nominal              5005.2      4242.0       189.2       259.0       315.0 
       on                 5005.2      4242.0       189.2       259.0       315.0 
       off                   -           -           -           -           -   
@@ -37,6 +38,7 @@ Load
     dispatched           1733.7      1438.0       107.2        73.5       115.0 
       fixed              1733.7      1438.0       107.2        73.5       115.0 
       dispatchable          -           -           -           -           -   
+    curtailed               -           -           -           -           -   
     nominal              1733.7      1438.0       107.2        73.5       115.0 
       on                 1733.7      1438.0       107.2        73.5       115.0 
       off                   -           -           -           -           -   
